<resources>
    <string name="app_name" translatable="false">Savi</string>

    <string name="date_day_number_sample" translatable="false">21</string>
    <string name="date_day_name_sample" translatable="false">Mon</string>
    <string name="date_month_sample" translatable="false">Aug</string>
    <string name="date_year_sample" translatable="false">2018</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="activity_guidetext">Add Your Financial Activity</string>
    <string name="activity_name">Name</string>
    <string name="activity_name_hint_expense">What did you pay?</string>
    <string name="activity_name_hint_income">What did you get?</string>
    <string name="activity_value">Value</string>
    <string name="activity_value_hint">How much it cost?</string>
    <string name="activity_note">Note</string>
    <string name="activity_note_hint">Any details about it?</string>
    <string name="activity_save">Save</string>
    <string name="activity_delete">DELETE</string>
    <string name="deleted">Deleted</string>
    <string name="deleted_all">All data was removed</string>
    <string name="deleted_all_canceled">No data was removed</string>
    <string name="activity_history">Activity History</string>
    <string name="daily_income">INCOME</string>
    <string name="daily_expense">EXPENSE</string>
    <string name="wallet_balance">BALANCE</string>
    <string name="money_sample_1" translatable="false">200.000</string>
    <string name="money_sample_2" translatable="false">500.000</string>
    <string name="money_sample_3" translatable="false">1.000.000</string>
    <string name="activity_type_income">IN</string>
    <string name="activity_type_expense">EX</string>
    <string name="calculator_0" translatable="false">0</string>
    <string name="calculator_000" translatable="false">000</string>
    <string name="calculator_1" translatable="false">1</string>
    <string name="calculator_2" translatable="false">2</string>
    <string name="calculator_3" translatable="false">3</string>
    <string name="calculator_4" translatable="false">4</string>
    <string name="calculator_5" translatable="false">5</string>
    <string name="calculator_6" translatable="false">6</string>
    <string name="calculator_7" translatable="false">7</string>
    <string name="calculator_8" translatable="false">8</string>
    <string name="calculator_9" translatable="false">9</string>
    <string name="calculator_divide" translatable="false">/</string>
    <string name="calculator_multiply" translatable="false">X</string>
    <string name="calculator_plus" translatable="false">+</string>
    <string name="calculator_minus" translatable="false">-</string>
    <string name="calculator_equal" translatable="false">=</string>
    <string name="calculator_save">DONE</string>

    <string name="large_number_exception">Oops, too large money</string>
    <string name="wallet_limit_exception">Oops, wallet is not large enough</string>

    <string name="dialog_confirm_title">Are you sure?</string>
    <string name="dialog_confirm_yes">Yes</string>
    <string name="dialog_confirm_no">No</string>

    <string name="action_setting">Setting</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_reset">Reset</string>
    <string name="reset_description">Remove all of your saved data.</string>
    <string name="reset_caution">Be careful, this action cannot be undone.</string>
    <string name="reset_textguide">Please copy text below:</string>
    <string name="reset_copytext">I am sure to reset my data</string>

    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_language">Language</string>
    <string name="pref_description_language">
        Change to your preferred language.
    </string>
    <string-array name="pref_language_titles">
        <item>English</item>
        <item>Indonesia</item>
    </string-array>
    <string-array name="pref_language_values">
        <item>English</item>
        <item>Indonesia</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
