<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:id="@+id/viewRootMain">

    <!-- Layout for Date -->
    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="15dp">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="30dp">
            <Button
                android:id="@+id/btnPreviousDay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_date_yesterday"
                android:textSize="30sp"
                android:gravity="center"/>
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/viewDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="5dp">
                <TextView
                    android:id="@+id/tvDayNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/date_day_number_sample"
                    android:textSize="40sp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/tvDayNameMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_day_name_sample"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="5dp">
                <TextView
                    android:id="@+id/tvMonthMain"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:text="@string/date_month_sample"
                    android:textSize="25sp"
                    android:gravity="center"/>
                <TextView
                    android:id="@+id/tvYearMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_year_sample"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="30dp">
            <Button
                android:id="@+id/btnNextDay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_date_tomorrow"
                android:textSize="30sp"
                android:gravity="center"/>
        </RelativeLayout>
    </LinearLayout>

    <!-- Layout for Activity input -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_guidetext"
            android:layout_gravity="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#aaaaaa"
            android:layout_margin="7dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="11dp"
        android:layout_marginLeft="11dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_name"
                android:textSize="12sp"/>
            <EditText
                android:id="@+id/inActivityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_name_hint"
                android:textSize="15sp"
                android:paddingTop="3dp"
                android:inputType="text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_value"
                android:textSize="12sp"/>
            <EditText
                android:id="@+id/inActivityValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_value_hint"
                android:textSize="15sp"
                android:paddingBottom="5dp"
                android:inputType="number"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_note"
                android:textSize="12sp"/>
            <EditText
                android:id="@+id/inActivityNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_note_hint"
                android:textSize="15sp"
                android:inputType="text"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <LinearLayout
                    android:id="@+id/viewActivityType"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="#aaaaaa"
                    android:orientation="horizontal"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp">
                </LinearLayout>
                <Button
                    android:id="@+id/btnSaveActivity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="#aaaaaa"
                    android:text="@string/activity_save"
                    android:textSize="12sp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <!-- Layout for Summary -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#cccccc"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"/>
    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_income"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/tvIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_sample_2"
                android:textSize="17sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet_balance"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/tvBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_sample_3"
                android:textSize="19sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_expense"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/tvExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_sample_1"
                android:textSize="17sp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/activity_history"
        android:gravity="center"
        android:background="#dddddd" />
</LinearLayout>