<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".recordedit.RecordEditActivity"
    android:id="@+id/viewRoot">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="11dp"
        android:layout_marginLeft="11dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_name"
                android:textSize="12sp"/>
            <EditText
                android:id="@+id/inActivityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_name_hint"
                android:textSize="15sp"
                android:paddingTop="3dp"
                android:inputType="text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_value"
                android:textSize="12sp"/>
            <EditText
                android:id="@+id/inActivityValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_value_hint"
                android:textSize="15sp"
                android:paddingBottom="5dp"
                android:inputType="number"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_note"
                android:textSize="12sp"/>
            <EditText
                android:id="@+id/inActivityNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_note_hint"
                android:textSize="15sp"
                android:inputType="text"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">
                <LinearLayout
                    android:id="@+id/viewActivityType"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:background="#aaaaaa"
                    android:orientation="horizontal"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp">
                </LinearLayout>
                <Button
                    android:id="@+id/btnSaveActivity"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:background="#aaaaaa"
                    android:text="@string/activity_save"
                    android:textSize="12sp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <Button
        android:id="@+id/btnDeleteActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/activity_delete"
        android:textColor="@android:color/white"
        android:background="#ee3333"/>
</RelativeLayout>