<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:orientation="vertical"
    android:id="@+id/viewRoot">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/tvActivityType"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:text="@string/activity_type_income"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:background="@color/income"
            android:gravity="center"
            android:visibility="gone"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_toRightOf="@id/tvActivityType"
            android:layout_toEndOf="@id/tvActivityType"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp">
            <TextView
                android:id="@+id/tvActivityName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_name_hint"
                android:gravity="center"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvActivityNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_note_hint"
                android:textSize="12sp"
                android:textColor="#999999"
                android:gravity="center"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tvActivityValue"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/activity_value_hint"
            android:textStyle="bold"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#eeeeee" />
</LinearLayout>